fix: scrollbar

--- a/src/components/TrainSidebar/TrainSidebar.module.scss
+++ b/src/components/TrainSidebar/TrainSidebar.module.scss
@@ -8,6 +8,15 @@
   z-index: 1000;
   overflow-y: none;
   overflow-x: scroll;
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
   transition: right 0.3s ease;
   padding: 0;
 
